--- a/assets/style.css
+++ b/assets/style.css
@@ -9,332 +9,25 @@
     --blue: #2d9ae2
 }
 
-.startQuiz,
-.infoBox,
-.quizBox,
-.resultsBox {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2),
-                0px 6px 20px 0 rgba(0,0,0,0.19);
-}
-
-.infobox.activeInfo {
-    z-index: 5;
-    opacity: 1;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(0.9);
-}
-
-.startQuiz button {
-    padding: 15px 30px;
-    font-size: 20px;
-    color: rgb(7, 7, 7);
-    background-color: var(--blue);
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.infoBox {
-    width: 550px;
-    background: white;
-    border: 1px solid var(--blue);
-    border-radius: 5px;
-    opacity: 0;
-    pointer-events: none;
-    transform: translate(-50%, -50%) scale(0.9);
-}
-
-.infoBox .quizTitle {
-    height: 60px;
-    width: 100%;
-    border-bottom: 1px solid var(--blue);
-    display: flex;
-    align-items: center;
-    padding: 0 30px;
-    font-size: 30px;
-    font-weight: 600;
-}
-
-.infoBox .quizInfo {
-    padding: 15px 35px;
-}
-
-.infoBox .quizInfo .info {
-    margin: 5px 0;
-    font-size: 17px;
-}
-
-.infobox .buttons {
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding: 0 35px;
-  border-top: 1px solid var(--blue); 
-}
-
-.infoBox .buttons button {
-    margin: 0 5px;
-    height: 40px;
-    width: 100px;
-    border: 1px solid var(--blue);
-    color: black;
-    border-radius: 5px;
-    font-size: 16px;
-    font-weight: 500;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.buttons button.highScores {
-    color: black;
-    background: var(--blue);
-}
-
-.buttons button.highScores:hover {
-    background:rgb(9, 212, 219);
-}
-
-.buttons button.start {
-    color: black;
-    background: var(--blue);
-}
-
-.buttons button.start:hover {
-    background:rgb(9, 212, 219);
-}
-
-.questionText {
-    position: absolute;
-    width: 550px;
-    height: 365px;
-    padding: 0 30px;
-    display: flex;
-    align-items: top;
-    border: 1px solid var(--blue);
-    justify-content: space-between;
-}
-
-.submit {
-    margin-left: 33%;
-    margin-top: 50%;
-    background-color:var(--blue);
-    border-radius: 5px;
-    height: 55px;
-    width: 65px; 
-}
-
-.quizBox {
-    width: 550px;
-    border-radius: 5px;
-    opacity: 0;
-    pointer-events: none;
-    transform: translate(-50%, -50%) scale(0.9);
-}
-
-.quizBox header  {
-    position: relative;
-    z-index: 99;
-    height: 70px;
-    padding: 0 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 5px 5px 0 0;
-    box-shadow: 0px 3px 5px 1px rgb(65, 64, 64);
-}
-
-.quizBox header .title {
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.quizBox header .timer {
-    display: flex;
-    /* align-items: right; */
-    justify-content: space-between;
-    width: 145px;
-    height: 45px;
-    background: var(--blue);
-    border: 1px solid #062b91;
-    border-radius: 5px;
-    padding: 0 8px;
-}
-
-.quizBox header .timer .timerText {
-    font-weight: 400;
-    font-size: 17px;
-    user-select: none;
-}
-
-.quizBox header .timer .currentTime {
-    font-size: 18px;
-    font-weight: 500;
-    background: #343a40;
-    height: 30px;
-    width: 45px;
-    color: var(--blue);
-    text-align: center;
-    line-height: 30px;
-    border-radius: 5px;
-    border: 1px solid #343a40;
-    user-select: none;
-}
-
-.quizBox section {
-    padding: 25px 30px 20px 30px;
-    background: #ffff;
-}
-
-.quizBox section .questionText {
-    font-size: 25px;
-    font-weight: 600;
-    }
-
-.quizBox section .answersList {
-    padding: 10px 0;
+/* button {
     display: block;
-    margin-top: 25px;
-}
-
-section .answerslist .answers {
-    background: var(--blue);
-    border: 1px solid var(--blue);
-    border-radius: 5px;
-    padding: 8px 10px;
-    margin-bottom: 10px;
-    font-size: 17px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-section .answersList .answers:hover {
-    color: #062b91;
-    background: rgb(9, 212, 219);
-    border-color: #343a40;
-}
-
-.answersList .answers:last-child {
-    margin-bottom: 0px;
-}
-
-.answerslist .answers .icon {
-    height: 26px;
-    width: 26px;
-    border: 2px solid transparent;
-    border-radius: 75%;
-    text-align: center;
-    font-size: 13px;
-    line-height: 24px;
-    pointer-events: none;
-}
-
-.answerslist .answers .iconRight {
-    color:black;
-    border-color: #23903c;
-    background: #d4edda;
-}
-
-.answerslist .answers .iconWrong {
-    color: red;
-    background: #d4edda;
-    border-color: red;
-}
-
-.quizBox footer {
-    height: 60px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-footer .submit {
-    height: 40px;
-    padding: 0 13px;
-    font-size: 18px;
-    font-weight: 400;
-    border: none;
-    outline: none;
-    color: black;
-    background: var(--blue);
-    border-radius: 5px;
-    border: 1px solid var(-blue);
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-footer .submit:hover {
-    background:rgb(9, 212, 219);
-}
-
-.resultsBox {
-    background: var(--blue);
-    width: 450px;
-    padding: 25px 30px;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-    opacity: 0;
-    pointer-events: none;
-    transform: translate(-50%, -50%) scale(0.9);
-}
-
-.resultsBox .icon {
-    font-size: 100px;
-    color: var(--blue);
-    margin-bottom: 10px;
-}
-
-.resultsBox .finished {
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.resultsBox .scoreText span {
-    display: flex;
-    margin: 10px 0;
-    font-size: 18px;
-    font-weight: 500;
-}
-
-.scoreText span p {
-    font-weight: 600;
-    padding: 0 4px;
-}
-
-.resultsBox .buttons {
-    display: flex;
-    margin: 20px 0;
-}
-
-.resultsBox .buttons button {
-    margin: 0 10px;
-    height: 40px;
-    padding: 0 20px;
-    border: none;
-    outline: none;
-    font-size:  15px;
-    font-weight: 500;
-    border-radius: 5px;
-    border: 1px solid var(--blue);
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-
-
-/* #back, #clear, #viewHigh {
-    margin-left: 33%;
-    margin-top: 5px;
-    background-color:var(--blue);
-    border-radius: 5px;
+    background-color: var(--blue);
 } */
+
+.start_btn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 30px;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
+#questions {
+    position: absolute;
+    top: 30%;
+    left: 40%;
+    color: black;
+
+}
+
