--- a/assets/style.css
+++ b/assets/style.css
@@ -96,6 +96,11 @@ main {
 #submittedScores p {
     border: 1px solid var(--blue);
     display: flex;
+    width: 150px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 153px;
+    margin-bottom: 1px;
 }
 
 .buttonBox {
